# parsec-code-parsec-01

./: .gitignore
test_webcam_opencv30/: CMakeLists.txt  main_TK1.cpp  my_lib.cpp  my_lib.h
